--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "domready": "^1.0.8",
     "express": "^4.13.4",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "async": "^2.0.0-rc.3",
+    "elasticsearch": "^11.0.0",
+    "lodash": "^4.10.0",
+    "moment": "^2.12.0",
+    "moment-timezone": "^0.5.3",
+    "user-agent-parser": "^0.6.0",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
