--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "src/server/index.js",
   "dependencies": {
     "async": "^2.0.0-rc.3",
+    "auth0-oauth2-express": "^1.1.5",
     "domready": "^1.0.8",
     "elasticsearch": "^11.0.0",
     "express": "^4.13.4",
     "express-jwt": "^3.3.0",
+    "jwt-decode": "^2.0.1",
     "lodash": "^4.10.0",
     "moment": "^2.12.0",
     "moment-timezone": "^0.5.3",
     "nconf": "^0.8.4",
+    "path": "^0.12.7",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "user-agent-parser": "^0.6.0",
