--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/server/index.js",
   "dependencies": {
     "async": "^2.0.0-rc.3",
+    "auth0": "^2.1.0",
     "auth0-oauth2-express": "^1.1.5",
     "domready": "^1.0.8",
     "elasticsearch": "^11.0.0",
