--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "elasticsearch": "^11.0.0",
     "express": "^4.13.4",
     "express-jwt": "^3.3.0",
+    "jquery": "^2.2.3",
     "jwt-decode": "^2.0.1",
     "lodash": "^4.10.0",
     "moment": "^2.12.0",
