--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "async": "^2.0.0-rc.3",
     "auth0": "^2.1.0",
     "auth0-oauth2-express": "^1.1.5",
+    "chartjs": "^0.3.7",
     "domready": "^1.0.8",
     "elasticsearch": "^11.0.0",
     "express": "^4.13.4",
@@ -20,6 +21,7 @@
     "path": "^0.12.7",
     "react": "^15.0.1",
     "react-bootstrap-daterangepicker": "^3.0.0",
+    "react-d3-basic": "^1.6.11",
     "react-dom": "^15.0.1",
     "user-agent-parser": "^0.6.0",
     "xtend": "^4.0.1"
