--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "elasticsearch": "^11.0.0",
     "express": "^4.13.4",
     "express-jwt": "^3.3.0",
+    "google-map-react": "^0.11.2",
     "jquery": "^2.2.3",
     "jwt-decode": "^2.0.1",
     "lodash": "^4.10.0",
