--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nconf": "^0.8.4",
     "path": "^0.12.7",
     "react": "^15.0.1",
+    "react-bootstrap": "^0.28.5",
     "react-bootstrap-daterangepicker": "^3.0.0",
     "react-chartjs": "^0.7.3",
     "react-dom": "^15.0.1",
